message RepoCommandParameterMessage {
  message Name {
    repeated bytes components = 8;
  }

  message RepoCommandParameter {
    optional Name name = 7;
    optional uint32 start_block_id = 204;
    optional uint32 end_block_id = 205;
    optional uint64 process_id = 206;
  }

  required RepoCommandParameter command = 201;
}
