message RepoCommandResponseMessage {

  message RepoCommandResponse {
    optional uint64 process_id = 206;
    required uint64 status_code = 208;
    optional uint64 start_block_id = 204;
    optional uint64 end_block_id = 205;
    optional uint64 insert_num = 209;
    optional uint64 delete_num = 210;
  } 

  required RepoCommandResponse response = 207;
}
